# todo-app

./: .gitattributes  .gitignore  LICENSE  README.md
auth-react-components/: README.md  package.json  tsconfig.json
auth-react-components/src/: index.ts
backend/: .gitignore  Cargo.toml  README.md  aarch64-build.sh  aarch64-run.sh  build.gradle  docker-compose.yml  mock-data.sql  run.sh  schema.sql  settings.gradle
backend/sql/: 1-todo-app-schema.sql  2-auth-schema.sql  3-todo-app-schema.sql  4-mock-data.sql
backend/src/: api.rs  db_types.rs  external_event_data_service.rs  external_event_service.rs  goal_data_service.rs  goal_dependency_service.rs  goal_entity_tag_service.rs  goal_event_service.rs  goal_intent_data_service.rs  goal_intent_service.rs  goal_service.rs  goal_template_data_service.rs  goal_template_pattern_service.rs  goal_template_service.rs  handlers.rs  main.rs  named_entity_data_service.rs  named_entity_pattern_service.rs  named_entity_service.rs  time_utility_function_service.rs  todo_app_api.rs  todo_app_db_types.rs  todo_app_handlers.rs  user_generated_code_service.rs  utils.rs
backend/src/main/java/todo/: ApiController.java  ApiKey.java  ApiKeyRowMapper.java  ApiKeyService.java  ErrorHandler.java  Errors.java  Event.java  EventRowMapper.java  EventService.java  Goal.java  GoalData.java  GoalDataRowMapper.java  GoalDataService.java  GoalResult.java  GoalResultRowMapper.java  GoalRowMapper.java  GoalService.java  MailService.java  MainApplication.java  Password.java  PasswordReset.java  PasswordResetRowMapper.java  PasswordResetService.java  PasswordRowMapper.java  PasswordService.java  PastEvent.java  PastEventData.java  PastEventDataRowMapper.java  PastEventDataService.java  PastEventRowMapper.java  PastEventService.java  Subscription.java  SubscriptionRowMapper.java  SubscriptionService.java  Task.java  TaskRowMapper.java  TaskService.java  TimeUtilityFunction.java  TimeUtilityFunctionPoint.java  TimeUtilityFunctionPointRowMapper.java  (+10 more)
backend/src/main/resources/: application.properties
backend2/: Cargo.toml  Dev.Dockerfile  Prod.Dockerfile  docker-compose.yml  schema.psql  todo-app.db
backend2/sql/: 1-mail-schema.psql  2-auth-schema.psql  2-auth-schema.sql  3-todo-app-schema.psql  3-todo-app-schema.sql  4-mock-data.psql  4-mock-data.sql
backend2/src/: goal_data_service.rs  goal_intent_data_service.rs  goal_intent_service.rs  goal_service.rs  main.rs  task_event_service.rs  time_utility_function_point_service.rs  time_utility_function_service.rs  todo_app_api.rs  todo_app_db_types.rs  todo_app_handlers.rs  utils.rs
common-react-components/: .gitignore  package.json
common-react-components/src/: index.ts
desktop-frontend/: README.md  package.json
desktop-frontend/public/: index.html  splashscreen.html
desktop-frontend/src/: react-app-env.d.ts
desktop-frontend/src-tauri/: Cargo.toml  tauri.conf.json
desktop-rust/: Cargo.toml
desktop-rust/src/: main.rs
frontend/: README.md  frontend-architecture.md  package.json
frontend-auth/: package.json
todo-app-react-components/: .gitignore  package.json  tsconfig.json
web-extension/: manifest.json  options.html  package-lock.json  package.json  popup.html  tsconfig.node.json
web-frontend/: .gitignore  README.md  craco.config.ts  package-lock.json  package.json  tsconfig.json
(+182 files in other folders)
