[package]
name = "todo-app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}

todo-app-service-api = {version = "*", git = "https://github.com/pimpale/todo-app-service-api"}
tokio-postgres = "0.7.5"
