[package]
name = "todo-app-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp ="^0.3"
clap = "3.0.0-beta.2"
postgres = "0.19.1"
tokio = { version = "1", features=["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}

todo-app-service-api = {version = "*", git = "https://github.com/pimpale/todo-app-service-api"}
